# open62541_compiled_nodeset_server

./: CMakeLists.txt
nodeset/: Test.xml
src/: main.c
